--- a/css/app.css
+++ b/css/app.css
@@ -17,12 +17,10 @@ p {
 
 figure {
   border: 5px dotted #fff;
-  /* border-left: 5px solid #fff; */
   border-radius: 100px;
   text-align: center;
   padding: 50px;
   margin: 100px;
-  /* width: 100%; */
 }
 
 img {
@@ -33,4 +31,8 @@ figcaption {
   text-align: center;
   font-style: italic;
   font-weight: bold;
+}
+
+audio, video {
+  width: 100%;
 }
