--- a/css/app.css
+++ b/css/app.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  color: #f90;
+  color: #f66;
   background-color: #000;
   font-size: 20px;
   font-family: "my-font";
@@ -35,4 +35,20 @@ figcaption {
 
 audio, video {
   width: 100%;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 2px solid #999;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
