--- a/css/app.css
+++ b/css/app.css
@@ -50,5 +50,9 @@ td, th {
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: #fff;
+}
+
+tr:nth-child(odd) {
+  background-color: #ffe6e6
 }
