--- a/css/studies.css
+++ b/css/studies.css
@@ -17,3 +17,21 @@ tr:nth-child(even) {
 tr:nth-child(odd) {
   background-color: #ffe6e6
 }
+
+th {
+  text-align: center;
+}
+
+td:nth-child(2) {
+  font-style: italic;
+}
+
+td:first-child, td:nth-child(3), td:nth-child(4) {
+  text-align: center;
+}
+
+.highlighted {
+  background-color: #f00;
+  color: #fff;
+  font-weight: bold;
+}
