--- a/css/studies.css
+++ b/css/studies.css
@@ -35,3 +35,25 @@ td:first-child, td:nth-child(3), td:nth-child(4) {
   color: #fff;
   font-weight: bold;
 }
+
+tbody > tr:hover {
+  background-color: #87CEEB;
+  color: #fff;
+  font-weight: bold;
+}
+
+#my-td {
+  background-color: #fff;
+  color: #000;
+  border: 2px solid #87CEEB;
+  margin: 28px 0 28px 0;
+  height: 40px;
+  padding: 28px;
+}
+
+.my-td-span {
+  background-color: #87CEEB;
+  color: inherit;
+  font-weight: bold;
+  padding: 19px;
+}
